# Keybolt

./: .gitignore  Cargo.toml  data.json
src/: cards_page.rs  identities_page.rs  json_io.rs  main.rs  passwords_page.rs  profile_page.rs  styling.rs  themes.rs
src/gui/: app.rs  keybolt.rs  mod.rs
src/gui/core/: app.rs  message.rs
src/gui/pages/: cards_page.rs  details_page.rs  entries_page.rs  identities_page.rs  mod.rs  nav_page.rs  passwords_page.rs  profile_page.rs
src/gui/styles/: button.rs  container.rs  font_constants.rs  keybolt_theme.rs  mod.rs  style_constants.rs
src/gui/styles/elements/: application.rs  button.rs  container.rs  mod.rs  scrollable.rs  text.rs  text_input.rs  toggler.rs
src/gui/styles/types/: element_type.rs  mod.rs  palatte.rs  palette.rs  style_tuple.rs  style_type.rs  style_types.rs
src/gui/types/: keybolt_app.rs  message.rs  mod.rs
src/secure/: encrypt.rs
