[package]
name = "keybolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
argon2 = "0.5"
base64 = "0.21"
iced = "0.9"
rand = "0.8.5"
secrets = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.7"
zeroize = "1.6"